gom exception lai